remove useless option