@@ -1,5 +1,5 @@
 ScriptedPlugin.scriptedSettings
 scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+  Seq("-Dplugin.version=" + version.value)
 }
 scriptedBufferLog := false
